# RealGazebo-ROS2

./: .gitignore
docker/: .dockerignore  Dockerfile
scripts/: edit_realgazebo.sh  example.yaml  run_control_multi_vehicle.sh  run_control_one_drone.sh  run_realgazebo.sh
src/drone_controller/: package.xml  setup.py
src/drone_controller/drone_controller/: drone_controller.py
src/manager/: package.xml  setup.py
src/manager/manager/: controller.py  px4_ros2.py
src/realgazebo/: CMakeLists.txt  package.xml
src/realgazebo/launch/: control_multi_vehicle.launch.py  control_one_drone.launch.py  realgazebo.launch.py
src/realgazebo/models/: boat.sdf.jinja  lc_62.sdf.jinja  rover_ackermann.sdf.jinja  x500.sdf.jinja
src/realgazebo/models/c-track/: model.config  model.sdf  model.sdf.jinja
src/realgazebo/models/rock/: model.config  rock.sdf  rock.sdf.jinja
src/realgazebo/models/rock/meshes/: rock_s.dae
src/realgazebo/plugins/motor_failure_ros2/: MotorFailureSystem.cpp  MotorFailureSystem.hpp  README.md
src/realgazebo/plugins/realgazebo/: RealGazebo.cpp  RealGazebo.hpp
src/realgazebo/worlds/: c-track.sdf
src/realgazebo/yaml/: 1105_workshop.yaml  example.yaml  one_drone.yaml
